# TrainningOtani

./: README.md
Server/: .gitignore  Dockerfile  README.md  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
Server/db/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  ca.pem  client-cert.pem  ib_buffer_pool  public_key.pem  server-cert.pem
Server/db/mysql/: general_log_213.sdi  slow_log_214.sdi
Server/db/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  (+78 more)
Server/db1/: auto.cnf  ca.pem  client-cert.pem  ib_buffer_pool  public_key.pem  server-cert.pem
Server/dependencies/: is_admin_role.py  is_valid_account.py
Server/routes/: admin.py  employee.py
(+170 files in other folders)
